--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-qr-barcode-scanner": "^2.1.20",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12"
   },
